--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
     <color name="colorPrimary">#232323</color>
-    <color name="colorPrimaryDark">232323</color>
-    <color name="colorAccent">232323</color>
+    <color name="colorPrimaryDark">#232323</color>
+    <color name="colorAccent">#232323</color>
 </resources>
